@startuml

class Solution45 {
    -readFile rF;
    -replaceWord rW;
    -writeFile wF;
    -String fileName = "data/exercise44_input.txt"

    main(String[])
    +fileRead()
    'rF.fileRead(fileName)
    +wordReplace()
    'rW.wordReplace(fileRead)
    +askFilename()
    'fN.askFN()
    +fileWrite()
    'wF.fileWrite(wordReplace)
}

class readFile {
    +String fileReader(String fileName)
}

class replaceWord {
    +String wordReplacer(String fileString)
}

class askFilename {
    +String askFn
}

class writeToFile {
    +fileWriter(String stringToFile, String askFilename)
}

Solution45 --o readFile
Solution45 --o replaceWord
Solution45 --o askFilename
Solution45 --o writeToFile

@enduml